--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   </li>
 </ul>
 
-<p>{{selectMember.id}}</p><br>
+<!-- <p>{{selectMember.id}}</p><br>
 <p>{{selectMember.name}}</p><br>
-<p>{{selectMember.surname}}</p><br>
+<p>{{selectMember.surname}}</p><br> -->
 <router-outlet></router-outlet>
